apps/build_outputs/listing10_3/build_errors.txt
[115/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_mult_f32.c.obj
[116/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_mult_q31.c.obj
[117/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_negate_f32.c.obj
[118/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_negate_q7.c.obj
[119/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_offset_f32.c.obj
[120/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_negate_q15.c.obj
[121/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_offset_q31.c.obj
[122/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_mult_q7.c.obj
[123/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_offset_q15.c.obj
[124/379] Building CXX object embedDIP/CMakeFiles/embedDIP.dir/wrapper/CameraWrapper.cpp.obj
[125/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_negate_q31.c.obj
[126/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_scale_f32.c.obj
[127/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_offset_q7.c.obj
[128/379] Building CXX object embedDIP/CMakeFiles/embedDIP.dir/wrapper/DisplayWrapper.cpp.obj
[129/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_scale_q15.c.obj
[130/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_scale_q7.c.obj
[131/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_shift_q15.c.obj
[132/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_sub_f32.c.obj
[133/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_scale_q31.c.obj
[134/379] Building CXX object embedDIP/CMakeFiles/embedDIP.dir/wrapper/ImageWrapper.cpp.obj
FAILED: embedDIP/CMakeFiles/embedDIP.dir/wrapper/ImageWrapper.cpp.obj 
/usr/bin/arm-none-eabi-g++ -DARM_MATH_CM7 -DENABLE_CAMERA_INPUT=1 -DENABLE_DISPLAY_OUTPUT=1 -DENABLE_IMAGE_PROCESSING=1 -DENABLE_UART_LOGGING=1 -DSTM32F746xx -DSTM32F7xx -DTARGET_BOARD_STM32F7=1 -DUSE_EMBED_DIP -D__FPU_PRESENT=1 -I/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP -I/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/core -I/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/imgproc -I/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/board -I/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/device/camera -I/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/device/display -I/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/device/serial -I/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/wrapper -I/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/../Drivers/STM32F7xx_HAL_Driver/Inc -I/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/../Drivers/CMSIS/Core/Include -I/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/../Drivers/CMSIS/DSP/Include -I/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/../Core/Inc -I/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/board/stm32f7 -I/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/Core/Inc -mcpu=cortex-m7 -mfpu=fpv5-sp-d16 -mfloat-abi=hard  -Wall -fdata-sections -ffunction-sections -fstack-usage -mcpu=cortex-m7 -mfpu=fpv5-sp-d16 -mfloat-abi=hard  -Wall -fdata-sections -ffunction-sections -fstack-usage -fno-rtti -fno-exceptions -fno-threadsafe-statics -O0 -g3 -std=gnu++17 -MD -MT embedDIP/CMakeFiles/embedDIP.dir/wrapper/ImageWrapper.cpp.obj -MF embedDIP/CMakeFiles/embedDIP.dir/wrapper/ImageWrapper.cpp.obj.d -o embedDIP/CMakeFiles/embedDIP.dir/wrapper/ImageWrapper.cpp.obj -c /media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/wrapper/ImageWrapper.cpp
/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/wrapper/ImageWrapper.cpp: In member function 'void embedDIP::Image::piecewiseTransform(embedDIP::Image&, const std::vector<unsigned char>&, const std::vector<unsigned char>&) const':
/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/wrapper/ImageWrapper.cpp:367:83: error: invalid conversion from '__gnu_cxx::__alloc_traits<std::allocator<unsigned char>, unsigned char>::value_type' {aka 'unsigned char'} to 'const uint8_t*' {aka 'const unsigned char*'} [-fpermissive]
  367 |             raw(), out.raw(), breakpoints[0], breakpoints[1], values[0], values[1]);
      |                                                                                   ^
      |                                                                                   |
      |                                                                                   __gnu_cxx::__alloc_traits<std::allocator<unsigned char>, unsigned char>::value_type {aka unsigned char}
/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/wrapper/ImageWrapper.cpp:367:83: error: invalid conversion from '__gnu_cxx::__alloc_traits<std::allocator<unsigned char>, unsigned char>::value_type' {aka 'unsigned char'} to 'const uint8_t*' {aka 'const unsigned char*'} [-fpermissive]
/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/wrapper/ImageWrapper.cpp:367:83: error: too many arguments to function 'embeddip_status_t piecewiseTransform(const Image*, Image*, const uint8_t*, const uint8_t*, int)'
In file included from /media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/imgproc/pixel.h:35,
                 from /media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/wrapper/ImageWrapper.hpp:26,
                 from /media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/wrapper/ImageWrapper.cpp:4:
/media/odurgut/82a56851-6a27-45e3-afb0-3549236924ca/sda1/book/examples-stm32-c/embedDIP/imgproc/thresh.h:90:19: note: declared here
   90 | embeddip_status_t piecewiseTransform(const Image *src,
      |                   ^~~~~~~~~~~~~~~~~~
[135/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_shift_q31.c.obj
[136/379] Building CXX object embedDIP/CMakeFiles/embedDIP.dir/wrapper/SerialWrapper.cpp.obj
[137/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_sub_q15.c.obj
[138/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_shift_q7.c.obj
[139/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_sub_q31.c.obj
[140/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/CommonTables/arm_const_structs.c.obj
[141/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_sub_q7.c.obj
[142/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_conj_q15.c.obj
[143/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_conj_f32.c.obj
[144/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_conj_q31.c.obj
[145/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_dot_prod_f32.c.obj
[146/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_dot_prod_q15.c.obj
[147/379] Building C object embedDIP/CMakeFiles/embedDIP.dir/__/Drivers/CMSIS/DSP/Source/CommonTables/arm_common_tables.c.obj
ninja: build stopped: subcommand failed.
